WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120715
Expected result images are sometimes blank in WKTR
https://bugs.webkit.org/show_bug.cgi?id=120715
Summary
Expected result images are sometimes blank in WKTR
Simon Fraser (smfr)
Reported
2013-09-04 18:24:52 PDT
Expected result images are sometimes blank in WKTR
Attachments
Patch
(3.18 KB, patch)
2013-09-04 18:29 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Fix the other platforms
(6.66 KB, patch)
2013-09-05 11:49 PDT
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-09-04 18:29:02 PDT
Created
attachment 210534
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-09-04 18:29:30 PDT
<
rdar://problem/14382142
>
Early Warning System Bot
Comment 3
2013-09-04 18:45:10 PDT
Comment on
attachment 210534
[details]
Patch
Attachment 210534
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/1703017
Tim Horton
Comment 4
2013-09-04 19:17:32 PDT
Comment on
attachment 210534
[details]
Patch Seems reasonable to me, though I wonder if we shouldn't maybe do something cross-platform since everyone is doing this.
EFL EWS Bot
Comment 5
2013-09-04 19:28:15 PDT
Comment on
attachment 210534
[details]
Patch
Attachment 210534
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/1693808
Simon Fraser (smfr)
Comment 6
2013-09-05 11:49:46 PDT
Created
attachment 210641
[details]
Fix the other platforms
Simon Fraser (smfr)
Comment 7
2013-09-05 12:34:47 PDT
Comment on
attachment 210641
[details]
Fix the other platforms Carry Tim's review forward.
Simon Fraser (smfr)
Comment 8
2013-09-05 12:38:08 PDT
https://trac.webkit.org/r155140
Ryosuke Niwa
Comment 9
2013-09-18 19:08:48 PDT
It seems like this patch caused media/video-object-fit.html to fail on Lion WK2 builders:
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fvideo-object-fit.html
Alexey Proskuryakov
Comment 10
2013-09-18 22:33:00 PDT
media/video-object-fit.html is flaky everywhere.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug